samples/_failures_safe/1761334609_f7c68e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75867b59.c: In function ‘main’:
./samples/SAFE/__tmp_75867b59.c:159:17: error: expected declaration or statement at end of input
  159 |                 print_matrix(&mat1);
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_75867b59.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75867b59.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75867b59.c:159:17: error: expected declaration or statement at end of input
